--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="description" content="Móveis ecológicos">
 <meta name="keywords" content="moveis ecologicos">
-<link rel="stylesheet" href="principal.css">
+<link rel="stylesheet" href="js/principal.css">
 <title>Móveis Ecológicos</title>
 </head>
 <body onload="trocaBanner();">
