--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>Móveis Ecológicos</title>
 </head>
 <body onload="trocaBanner();">
-<h1>Móveis Ecológicos S. A.</h1>
+<h1>Móveis Ecológicos S. A. - Aqui tem oferta !! </h1>
 <h2 id="mensagem"></h2>
 <ul>
 <li>Móveis de garrafas PET</li>
